--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 <IfModule mod_rewrite.c>
-    RewriteBase /~aa85992/CS3620/vehicle-history
+    RewriteBase /~zs21694/vehicle_history
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule (.*)$ api.php?request=$1 [QSA,L,PT,NS]
 </IfModule>
